--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+body{
+  background-position: center !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+}
 li{
     float: right !important;
     text-align: left !important;
     cursor: pointer;
 }
+
 small{
     float: right !important;
 }
@@ -82,6 +88,9 @@ input:focus{
   text-align: left !important;
 
 }
+h6{
+  margin-left: 30px;
+}
 select:focus{
   box-shadow: none !important;
   border: 0px solid white !important;
@@ -92,4 +101,36 @@ select:hover{
 }
 select:option{
   background-color: rgba(0, 0, 0, 0.178) !important;
+}
+iframe {
+  width: 100% !important;
+  height: 50vh !important;
+}
+#btn2{
+  float: right !important; 
+}
+#btn3{
+  float: left !important; 
+}
+@media screen and (max-width: 475px){
+  #map{
+    width: 24px !important;
+  }
+  #btn2{
+    float: none !important;
+    
+  }
+}
+#scndsh{
+  word-wrap: break-word !important;
+}
+.curren{
+  font-size: 14px !important;
+  margin-left: -30px;
+}
+.containafter{
+  background-color: rgba(255, 255, 255, 0.438);
+}
+input{
+  background-color: transparent !important;
 }
